[package]
name = "dao"
version = "0.1.0"
authors = ["Tianlang <tianlangstudio@aliyun.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

serde = { version = "1", features = ["derive"] }
common = {path = "../common"}

diesel = {version ="2", features=["mysql","r2d2", "chrono"]}
chrono = { version = "*", features = ["serde"] }