[package]
name = "user"
version = "0.1.0"
authors = ["Tianlang <tianlangstuido@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

serde = { version = "1", features = ["derive"] }
common = {path = "../common"}

diesel = {version ="1", features=["mysql","r2d2"]}