[package]
name = "web"
version = "0.1.0"
authors = ["Tianlang <tianlangstuido@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
actix-web={version = "2", features=["rustls"]}
actix-rt="1"
actix-session="0.3"
actix-files = "0.2.2"
actix-service = "1"
actix-utils = "1"
actix-multipart = "0.2"
async-std = "1"
lazy_static = "1.4"
tera = "1"
futures = "0.3"
rustls = "0.16"
serde="1"
diesel = {version ="1", features=["mysql","r2d2"]}
common = {path="../common"}
dao = {path="../dao"}

