[package]
name = "web"
version = "0.1.0"
authors = ["Tianlang <tianlangstuido@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
http="0.2"
actix-web={version = "4", features=["openssl"]}
#actix-rt="1"
actix-session={version="0.6", features = ["cookie-session"]}
actix-files = "0.6"
actix-utils = "3.0"
actix-service="2"
actix-multipart = "0.4"
actix-http = "3"
actix-identity = "0.4"
async-std = "1"
openssl = { version = "0.10", features = ["v110"] }
lazy_static = "1.4"
tera = "1"
futures = "0.3"
serde="1"
diesel = {version ="1", features=["mysql","r2d2"]}
common = {path="../common"}
dao = {path="../dao"}

