[package]
name = "web"
version = "0.1.0"
authors = ["Tianlang <tianlangstudio@aliyun.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
http= "0.2"
actix-web={version = "4", features = ["rustls-0_23"] }
rustls = "0.23.*"
#rustls-pemfile = "2.2.*"
#actix-rt="1"
actix-session={version= "0.10.1", features = ["cookie-session"]}
actix-files = "0.6"
actix-multipart = "0.7.2"
actix-http = "3"
async-std = "1"

tera = "1"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
serde="1"
diesel = {version ="2", features=["mysql","r2d2"]}
common = {path="../common"}
dao = {path="../dao"}

